use URI constructor and URI.toURL() instead of deprecated URL constructor